# cooler

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  _config.yml  index.html  index.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: ci.yml  lint-test-cov.yml  publish-pypi.yml  publish.yml
_layouts/: default.html
_sass/: jekyll-theme-minimal.scss
assets/css/: _carousel.css  _custom.css  style.css  style.scss
assets/img/: cooler_logo6.ai
cooler/: __init__.py  __main__.py  _binning.py  _logging.py  _reader.py  _version.py  _writer.py  api.py  balance.py  balancing.py  core.py  exception.py  fileops.py  format.py  genome.py  ice.py  io.py  legacy.py  models.py  parallel.py  reduce.py  region.py  spice.py  tools.py  util.py
cooler/cli/: __init__.py  _util.py  aggregate.py  balance.py  binnify.py  cload.py  coarsegrain.py  coarsen.py  copy.py  csort.py  digest.py  dump.py  expected.py  fileops.py  info.py  list_.py  load.py  makebins.py  merge.py  show.py  summarize.py  test.py  tile.py  util.py  zoomify.py
cooler/contrib/: dask.py  getter.py  higlass.py  recursive_agg_onefile.py
cooler/core/: __init__.py  _rangequery.py  _selectors.py  _tableops.py
cooler/create/: __init__.py  _create.py  _ingest.py
cooler/io/: __init__.py  _reader.py  _writer.py  creation.py  fileops.py  ingest.py  ingestion.py  reduction.py  utils.py
cooler/sandbox/: dask.py
cooler/scripts/: __init__.py  balance.py  load_contacts_hdf5.py  load_contacts_txt.py  load_matrix_txt.py  make_bins.py  make_fragments.py  recursive_agg_onefile.py  sort_contacts_hdf5.py  sort_contacts_txt.py  v1to2.py
docs/: Makefile  api.rst  cli.rst  concepts.rst  conf.py  container.rst  cooler.rst  datamodel.rst  glossary.rst  index.rst  intro.rst  library.rst  make_cli_rst.py  make_cli_rst2.py  quickstart.rst  releasenotes.md  requirements.txt  schema.rst  schema_current.rst  schema_v1.rst  schema_v2.rst  schema_v3.rst
examples/: make_cooler.py
scripts/: balance.py  cooler_to_tsv.py  dump_matrix_txt.py  load_contacts_hdf5.py  load_contacts_txt.py  load_matrix_txt.py  make_bins.py  make_fragments.py  normalize.py  recursive_agg_onefile.py  show.py  sort_contacts_txt.py  v0to1.py  v1to2.py
src/cooler/: __init__.py  _balance.py  _logging.py  _reduce.py  _typing.py  _version.py  api.py  balance.py  fileops.py  parallel.py  reduce.py  util.py
src/cooler/cli/: __init__.py  _util.py  balance.py  cload.py  coarsen.py  csort.py  digest.py  dump.py  fileops.py  info.py  load.py  makebins.py  merge.py  show.py  zoomify.py
src/cooler/core/: __init__.py  _rangequery.py  _selectors.py  _tableops.py
src/cooler/create/: __init__.py  _constants.py  _create.py  _ingest.py
src/cooler/sandbox/: dask.py
tests/: _common.py  conftest.py  test_api.py  test_api_selection.py  test_balance.py  test_balancing.py  test_chromsize_check.py  test_cli.py  test_cli_aggregate.py  test_cli_cload.py  test_cli_coarsen.py  test_cli_csort_cload.py  test_cli_export.py  test_cli_fileops.py  test_cli_ingest.py  test_cli_load.py  test_cli_merge.py  test_cli_ops.py  test_cload.py  test_contrib.py  test_contrib_higlass.py  test_core.py  test_create.py  test_create_ingest.py  test_create_sanitize.py  test_creation.py  test_creation_ingest.py  test_creation_sanitize.py  test_fileops.py  test_format.py  test_genome.py  test_ice.py  test_io.py  test_models.py  test_parallel.py  test_reduce.py  test_reduce_coarsen.py  test_reduce_merge.py  test_region.py  test_roundtrip.py  (+3 more)
tests/cli/: test_cload.py  test_coarsegrain.py  test_coarsen.py
tests/data/: GM12878-MboI-contacts.subsample.sorted.frag  GM12878-MboI-contacts.subsample.sorted.h5  GM12878-MboI-contacts.subsample.sorted.txt.gz.tbi  GM12878-MboI-matrix.2000kb.bg2  GM12878-MboI-matrix.2000kb.bg2.blksrt.gz.px2  GM12878-MboI-matrix.2000kb.cool  GM12878-MboI-matrix.2000kb.txt  UBR4_chromsize_bins.1nt.bed  aag2.chrom.sizes  aag2.sample1.pairs  dec2_20_pluslig_1pGene_grch38_UBR4_D_1nt.pairwise.sorted.cool  dec2_20_pluslig_1pGene_grch38_UBR4_D_1nt.pairwise.sorted.multires.cool  dec2_20_pluslig_1pGene_grch38_UBR4_D_1nt.pairwise.sorted.txt.gz.tbi  hg19.GM12878-MboI.pairs.subsample.blksrt.txt.gz.px2  hg19.sample1.pairs  manycontigs.1.cool  manycontigs.chrom.sizes  mm9.sample1.pairs  odd.1.coo  odd.1.cool  odd.4.cool  odd.chrom.sizes  scool_test_file.scool  toy.16.bg2  toy.2.bg2  toy.32.bg2  toy.4.bg2  toy.8.bg2  toy.asymm.16.bg2  toy.asymm.16.cool  toy.asymm.2.bg2  toy.asymm.2.cool  toy.asymm.32.bg2  toy.asymm.32.cool  toy.asymm.4.bg2  toy.asymm.4.cool  toy.asymm.8.bg2  toy.asymm.8.cool  toy.bins.8.bed  toy.bins.var.bed  (+18 more)
